Cambio en el color del head

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@
     background-image: url(../imgs/4_header.jpg);
     background-size: cover;
     background-position: center;
-    color: rgb(155, 214, 203);   
+    color: white;  
     line-height: 0.5px;
     border-bottom: 15px solid black;
     -webkit-text-stroke: 0.8px black;
